--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.dev.js --mode=development -d",
-    "build": "run-p prepare copy_p5 copy_ccapture copy_sample_code create_assets_folder copy_atom_live_server_script",
+    "build": "run-p prepare copy_p5 copy_p5_sound copy_ccapture copy_sample_code create_assets_folder copy_atom_live_server_script create_images_folder create_sounds_folder",
     "prepare": "webpack --mode=production",
     "copy_p5": "cpx ./node_modules/p5/lib/p5.min.js ./build/libraries/",
+    "copy_p5_sound": "cpx ./node_modules/p5/lib/addons/p5.sound.min.js ./build/libraries/",
     "copy_ccapture": "cpx ./node_modules/ccapture.js/build/CCapture.all.min.js ./build/libraries/ && cpx ./node_modules/ccapture.js/src/gif.worker.js ./build/libraries/",
     "copy_atom_live_server_script": "cpx ./sample_code/.atom-live-server.json ./build/",
     "copy_sample_code": "cpx ./sample_code/index.html ./build/ && cpx ./sample_code/my_vignettes.js ./build/",
-    "create_assets_folder": "mkdirp ./build/assets"
+    "create_assets_folder": "mkdirp ./build/assets",
+    "create_images_folder": "mkdirp ./build/assets/images",
+    "create_sounds_folder": "mkdirp ./build/assets/sounds"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
